Fixing experience image stretching issue

--- a/src/pages/style.css
+++ b/src/pages/style.css
@@ -99,7 +99,7 @@
 .img-card-img{
     width: 100%;
     height: 270px;
-    object-fit:cover;
+    object-fit: cover;
 }
 
 .img-card-container:hover .img-card-overlay{
@@ -140,6 +140,20 @@
 
 .experience-card-img{
     width: 30%;
+    height: auto;
+    object-fit: cover;
+}
+
+@media (max-width: 1000px) {
+    .experience-card{
+        flex-direction: column;
+    }
+
+    .experience-card-img {
+        width: 100%;
+        height: auto;
+        object-fit: cover;
+    }
 }
 
 @media only screen and (max-width: 768px) {
